--- a/app/app.component.html
+++ b/app/app.component.html
@@ -11,8 +11,10 @@
 </nav>
 <section>
   <header>
-    <h1>Media Watch List</h1>
-    <p class="description">Keeping track of the media I want to watch.</p>
+    <h1>Welcome To Mohammed's Media Watch List Registry </h1>
+    <h1>My Media List </h1>
+    <p class="description">In this registry I will be Keeping track of my media list.</p>
+    <p class="description">Direction: the medias will be added by filing the form or can be removed if they are no longer list.</p>
   </header>
   <router-outlet></router-outlet>
 </section>
