pushing the change

--- a/app/media-item-list.component.html
+++ b/app/media-item-list.component.html
@@ -14,11 +14,8 @@
   <a routerLink="/add">
     <img src="media/01.png" class="icon" />
   </a>
-<h1>--------------------------------------------------------------------------------------------------------
-  ------------------------------------------------------------------</h1>
-  <div>Question on the App</div>
   <div>
-    <p class="blocktext">Copyright &copy; 2017, Mohammed Kemal</p>
+    <p class="blocktext"><img src="https://user-images.githubusercontent.com/23619819/28747883-c613df44-7477-11e7-9890-df49cbcf69d3.JPG" class="icon" />Copyright &copy; 2017, Mohammed Kemal</p>
       <div class="footer-icons ">
         <div class="linkedin">
           <a href="mailto:mohakemal9@gmail.com"><i class="fa fa-envelope fa-3x"></i></a>
