--- a/app/app.component.html
+++ b/app/app.component.html
@@ -3,10 +3,10 @@
     <img src="media/04.png" class="icon" />
   </a>
   <a routerLink="/Movies">
-    <img src="media/03.png" class="icon" />
+    <img src="media/03.png" class="icon" />Movies
   </a>
   <a routerLink="/Series">
-    <img src="media/02.png" class="icon" />
+    <img src="media/02.png" class="icon" />Series
   </a>
 </nav>
 <section>
@@ -14,7 +14,7 @@
     <h1>Welcome To Mohammed's Media Watch List Registry </h1>
     <h1>My Media List </h1>
     <p class="description">In this registry I will be Keeping track of my media list.</p>
-    <p class="description">Direction: the medias will be added by filing the form or can be removed if they are no longer list.</p>
+    <p class="description">Direction: the medias will be added by filing the form or can be removed by clicking remove button.</p>
   </header>
   <router-outlet></router-outlet>
 </section>
