--- a/app/media-item-list.component.css
+++ b/app/media-item-list.component.css
@@ -29,7 +29,7 @@ section > media-item {
   margin: 10px;
 }
 footer {
-  text-align: right;
+  text-align: center;
 }
 footer .icon {
   width: 64px;
