--- a/app/media-item-list.component.html
+++ b/app/media-item-list.component.html
@@ -15,7 +15,7 @@
     <img src="media/01.png" class="icon" />
   </a>
   <div>
-    <p class="blocktext"><img src="https://user-images.githubusercontent.com/23619819/28747883-c613df44-7477-11e7-9890-df49cbcf69d3.JPG" class="icon" />Copyright &copy; 2017, Mohammed Kemal</p>
+    <p class="blocktext"><img src="https://user-images.githubusercontent.com/23619819/28747883-c613df44-7477-11e7-9890-df49cbcf69d3.JPG" class="icon"/>Copyright &copy; 2017, Mohammed Kemal<img src="https://user-images.githubusercontent.com/23619819/28747883-c613df44-7477-11e7-9890-df49cbcf69d3.JPG" class="icon"/></p>
       <div class="footer-icons ">
         <div class="linkedin">
           <a href="mailto:mohakemal9@gmail.com"><i class="fa fa-envelope fa-3x"></i></a>
