--- a/app/media-item-form.component.css
+++ b/app/media-item-form.component.css
@@ -6,14 +6,14 @@ ul {
   list-style-type: none;
 }
 ul li {
-  margin: 10px 0;
+  margin: 75px 0;
 }
 header, label {
-  color: #53ace4;
+  color: yellow;
 }
 input, select {
-  background-color: #29394b;
-  color: #c6c5c3;
+  background-color: white;
+  color: black;
   border-radius: 3px;
   border: none;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2) inset, 0 -1px 0 rgba(0,0,0,0.05) inset;
@@ -34,10 +34,10 @@ input[required].ng-invalid:not(.required-invalid) {
   color: #d93a3e;
 }
 #year {
-  width: 50px;
+  width: 80px;
 }
 button[type=submit] {
-  background-color: #45bf94;
+  background-color: green;
   border: 0;
   padding: 10px;
   font-size: 1em;
@@ -46,7 +46,7 @@ button[type=submit] {
   cursor: pointer;
 }
 button[type=submit]:disabled {
-  background-color: #333;
-  color: #666;
+  background-color: green;
+  color: white;
   cursor: default;
 }
